coupon/static/coupon/css/generate.css
@import url('https://fonts.googleapis.com/css?family=Roboto');
* {
    box-sizing: border-box;
}

body {
    background: #f6d9eb;
    width: 100%;
    height: 100%;
    background-color: #f7f9f8;
}

.col-sm-12 {
    height: 100%;
    padding: 0px !important;
    margin: 0px !important;
}

.container-fluid {
    height: 100%;
}

@media print {
    .no-print,
    .no-print * {
        display: none !important;
    }
}

#coupon-container {
    float: left;
    position: relative;
}

.print-bar {
    background: white;
    text-align: center;
}

span#instructions {
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    color: #7c7d7e;
}

.qrcode-img {
    position: absolute;
    bottom: 4%;
    right: 4%;
    width: 20%;
    height: 15%;
}

@media print {
    #coupon-container {
        height: 60% !important;
        width: 60% !important;
    }
}

@media (min-width:450px) {
    .coupon-img {
        width: 450px;
    }
    span#instructions {
        font-size: 15px;
    }
}

